--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
-    "start": "nodemon --exec babel-node src/server.js",
-    "dev": "nodemon --exec babel-node src/server.js"
+    "start": "node dist/server.js",
+    "dev": "nodemon --exec babel-node src/server.js",
+    "build": "babel src -d dist"
   },
   "dependencies": {
     "body-parser": "^1.20.3",
