--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "askit",
+  "main": "server.js",
    "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon --exec babel-node src/server.js",
@@ -11,6 +13,11 @@
     "express": "^4.21.0",
     "request": "^2.88.2"
   },
+  "keywords": [
+    "chatbot",
+    "askit",
+    "tiengviet"
+  ],
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/node": "^7.25.0",
