--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "askit",
   "main": "server.js",
-   "scripts": {
+  "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon --exec babel-node src/server.js",
     "build": "babel src -d dist"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
